test: refactor MemeCreateServiceTest with MockitoBean and add reset logic
- @Transactional 대신 명시적 cleanup
- Replace `@MockBean` with `@MockitoBean` for mocking dependencies
- Introduce `reset` method for mocked beans in `@AfterEach` cleanup
- Adjust test logic to verify exception handling during indexing
- Remove `@Transactional` annotation and update relevant comments